2014-03-19  Marek Polacek  <polacek@redhat.com>

	PR sanitizer/60569
	* ubsan.c (ubsan_type_descriptor): Check that DECL_NAME is nonnull
	before accessing it.

2014-03-19  Richard Biener  <rguenther@suse.de>

	PR lto/59543
	* lto-streamer-in.c (input_function): In WPA stage do not drop
	debug stmts.

2014-03-19  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/60559
	* vectorizable_mask_load_store): Replace scalar MASK_LOAD
	with build_zero_cst assignment.

2014-03-18  Kai Tietz  <ktietz@redhat.com>

	PR rtl-optimization/56356
	* sdbout.c (sdbout_parms): Verify that parms'
	incoming argument is valid.
	(sdbout_reg_parms): Likewise.

2014-03-18  Richard Henderson  <rth@redhat.com>

	PR target/60562
	* config/i386/i386.md (*float<SWI48x><MODEF>2_i387): Move down to
	be shadowed by *float<SWI48><MODEF>2_sse.  Test X87_ENABLE_FLOAT.
	(*float<SWI48><MODEF>2_sse): Check X87_ENABLE_FLOAT for alternative 0.

2014-03-18  Basile Starynkevitch  <basile@starynkevitch.net>

        * plugin.def: Improve comment for PLUGIN_INCLUDE_FILE.
        * doc/plugins.texi (Plugin callbacks): Mention
        PLUGIN_INCLUDE_FILE.
        Italicize plugin event names in description.  Explain that
        PLUGIN_PRAGMAS has no sense for lto1. Explain
        PLUGIN_INCLUDE_FILE.
        Remind that no GCC functions should be called after
        PLUGIN_FINISH.
        Explain what pragmas with expansion are.

2014-03-18  Martin Liska  <mliska@suse.cz>

	* cgraph.c (cgraph_update_edges_for_call_stmt_node): Added case when
	gimple call statement is update.
	* gimple-fold.c (gimple_fold_call): Changed order for GIMPLE_ASSIGN and
	GIMPLE_CALL, where gsi iterator still points to GIMPLE CALL.

2014-03-18  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/60557
	* ubsan.c (ubsan_instrument_unreachable): Call
	initialize_sanitizer_builtins.
	(ubsan_pass): Likewise.

	PR sanitizer/60535
	* ubsan.c (ubsan_type_descriptor, ubsan_create_data): Call